# arknights-auto

./: .gitignore  CMakeLists.txt  README.md  everyday.cpp  main.cpp  main.py  temp.cpp
image/: ..screenshot.png-WZYR  ..screenshot.png-w1mH
